008-homepage/styles.css
:root {
    --background-accent-color: #0891B2;
    --background-color: white;
    --heading-font-size: 2.5rem;
    --heading-font-weight: 200;
    --font-color-light: #565656;
    --font-color-dark: black;
    --footer-font-color: white;
    --min-project-card-width: 250px;
    --project-card-gap: 2rem;
    --box-shadow-color: rgba(0, 0, 0, 0.2);
    --card-box-shadow: 2px 2px 7px 2px var(--box-shadow-color);

    --header-image-overflow-top: 3rem;
    --header-image-overflow-left: 5rem;
    --header-card-padding: 1rem;
}

* {
    padding: 0;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    min-width: min-content;
    min-height: 100vh;
    font-family: "Roboto", sans-serif;
    color: var(--font-color-light);
    --gradient-start: 450px;
    --shadow-length: 5px;
    background: linear-gradient(170deg,
            var(--background-accent-color) 0 var(--gradient-start),
            var(--box-shadow-color) var(--gradient-start) var(--shadow-length),
            var(--background-color) calc(var(--gradient-start) + var(--shadow-length)) 0);
}

h1,
h2,
h3,
h4,
h5,
h6,
.project .image {
    font-family: "Playfair Display", Times, serif;
    font-weight: var(--heading-font-weight);
    color: var(--font-color-dark);
}

h2 {
    font-size: var(--heading-font-size);
    margin-bottom: 0.5rem;
}

header {
    padding: 2rem 0;
    padding-bottom: calc(2.5 * var(--heading-font-size));
}

header .content {
    padding-top: calc(var(--header-image-overflow-top) - var(--header-card-padding));
    padding-left: calc(var(--header-image-overflow-left) - var(--header-card-padding));
}

header .card {
    padding: var(--header-card-padding);
    background-color: var(--background-color);
    box-shadow: var(--card-box-shadow);
}

header .card p {
    line-height: 1.5rem;
    margin: 2rem 0;
}

header .image {
    float: left;
    height: 400px;
    width: 400px;
    margin-top: calc(-1 * var(--header-image-overflow-top));
    margin-left: calc(-1 * var(--header-image-overflow-left));
    margin-right: var(--header-card-padding);
    background-color: lightblue;
    display: flex;
    flex-direction: column;
}

header .name {
    font-size: 3rem;
    font-weight: 500;
    text-shadow: 0px 5px 5px var(--box-shadow-color);
    color: white;
    margin-top: auto;
    text-align: center;
}

header .links {
    justify-content: flex-end;
}

main {
    margin-bottom: 2rem;
}

.content {
    margin: 0 auto;
    width: clamp(250px, 90%, 1000px);
    box-sizing: border-box;
}

footer {
    margin-top: auto;
    padding-top: 1rem;
    background-color: var(--background-accent-color);
}

footer,
footer h2 {
    color: var(--footer-font-color);
}

ul {
    list-style: none;
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(var(--min-project-card-width), 1fr));
    gap: var(--project-card-gap);
}

.flex {
    display: flex;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.align-center {
    align-items: center;
}

.justify-center {
    justify-content: center;
}

.icon {
    height: 1.5rem;
    padding: 7px;
}

.icon:hover {
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.1);
}

.project {
    box-shadow: var(--card-box-shadow);
    background-color: white;
}

.project .image {
    height: 250px;
    flex: 1 0 auto;
    background-color: lightcoral;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--heading-font-size);
    font-weight: var(--heading-font-weight);
    text-align: center;
    padding: 0 3rem;
}

.project .title-row {
    display: flex;
    align-items: center;
}

.project h3 {
    font-weight: 500;
    margin: 0.5rem 0;
}

.project .icon {
    height: 1.2rem;
    padding: 5px;
}

.project .details {
    flex: 1 0 auto;
    padding: 0 1rem;
    padding-bottom: 4rem;
}

.project .details nav {
    margin-left: auto;
}

footer {
    padding: 3rem 0;
}

footer .content {
    display: flex;
    align-items: flex-start;
    gap: var(--project-card-gap);
}

footer .contact-me {
    flex: 1 1 200px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

footer .contact-me address {
    font-style: normal;
}

footer .contact-me span .icon {
    height: 1.2rem;
    filter: invert(100%);
    padding: 0;
}

footer .contact-me span {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

footer .contact-me nav {
    display: flex;
    gap: 1rem;
    margin-top: 1rem;
}

footer .contact-me nav .icon {
    height: 2rem;
    padding: 0;
}

footer .image {
    flex: 1 1 200px;
    height: 400px;
    background-color: lightblue;
}

@media (480px < width <=1080px) {
    :root {
        --header-image-overflow-top: 6rem;
        --header-image-overflow-left: 5rem;
    }

    header {
        padding-bottom: calc(1.5 * var(--heading-font-size));
    }

    header .image {
        background-color: lightgreen;
    }
}

@media (800px <=width <=1080px) {
    header .name {
        margin: 0;
        position: relative;
        left: 20rem;
    }
}

@media (width <=700px) {
    footer .content {
        flex-direction: column;
    }

    footer .image {
        flex: 1 1 auto;
        width: 100%;
        align-self: center;
    }

    footer .contact-me span .icon {
        display: none;
    }
}

@media (width <=480px) {
    :root {
        --min-project-card-width: 200px;
    }

    .content h2 {
        text-align: center;
    }

    header {
        padding-bottom: calc(1 * var(--heading-font-size));
    }

    header .content {
        margin: 0 auto;
        padding: 0;
    }

    header .card {
        margin: 0;
        padding: 0;
        background-color: transparent;
        box-shadow: none;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    header .image {
        margin: 0;
        margin-bottom: 2rem;
        padding: 0;
        float: none;
        width: 100%;
        background-color: lightcoral;
    }

    header .name {
        text-align: center;
    }

    header .card h2 {
        margin: 0;
    }

    header .card p {
        margin: 0.5rem 0;
    }

    footer .contact-me nav {
        align-self: center;
    }
}

